[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/models/synapse_enemy1.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Assets/models/synapse_enemy2.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Assets/models/synapse_enemy4.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Assets/models/synapse_enemy3.obj" type="ArrayMesh" id=4]
[ext_resource path="res://SynapseEnemy.gd" type="Script" id=5]

[sub_resource type="CylinderShape" id=1]
radius = 0.639299
height = 1.34109

[node name="SynapseEnemy" type="KinematicBody"]
script = ExtResource( 5 )

[node name="MeshInstance1" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="."]
visible = false
mesh = ExtResource( 2 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="."]
visible = false
mesh = ExtResource( 4 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="."]
visible = false
mesh = ExtResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0413122, 1.25807, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="ActivationTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ActivationTimer" to="." method="_on_ActivationTimer_timeout"]
